feat: Integrate Google Sheets API with OAuth for user authentication
- Added Google API and Google Sheets dependencies in package.json and package-lock.json.
- Implemented user sign-in and sign-out functionality using Google Identity Services.
- Enhanced ApiStatusBanner component to display user authentication status and email.
- Updated MonthSwitcher to filter out invalid month tabs.
- Refactored useTransactions hook to handle Google Sheets data loading and month tab management.
- Added validation for month tab names and improved error handling in Google Sheets API interactions.
- Created type definitions for Google APIs to improve TypeScript support.
- Removed demo mode messages and replaced them with appropriate user feedback.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-# Google Sheets API Configuration
-# Follow the instructions in GOOGLE_SHEETS_SETUP.md to get these values
+# Google Sheets OAuth Configuration
+# Get these from Google Cloud Console > APIs & Services > Credentials
 
-# Your Google API Key (must have Google Sheets API enabled)
-VITE_GOOGLE_API_KEY=your_google_api_key_here
+# OAuth 2.0 Client ID (for web application)
+VITE_GOOGLE_CLIENT_ID=your_google_client_id_here.apps.googleusercontent.com
 
 # Your Google Spreadsheet ID (found in the spreadsheet URL)
 # Example: https://docs.google.com/spreadsheets/d/1ABC...XYZ/edit
